crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__codellama_multi_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
[INST] <<SYS>>
You are a code assistant.
<</SYS>>

Now write a loop. [/INST]
