crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__codellama_single_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
[INST] Write a fibonacci function in Python. [/INST]
