crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__codellama_with_system.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
[INST] <<SYS>>
You are a Python expert.
<</SYS>>

Write a sort function. [/INST]
