crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__cohere_aya_single_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<|im_start|>system
You are Aya, a multilingual AI assistant created by Cohere.<|im_end|>
<|im_start|>user
Explain photosynthesis briefly.<|im_end|>
<|im_start|>assistant
