crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__cohere_multi_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<|START_OF_TURN_TOKEN|><|SYSTEM_TOKEN|>You are a Rust expert.<|END_OF_TURN_TOKEN|><|START_OF_TURN_TOKEN|><|USER_TOKEN|>How does borrowing work?<|END_OF_TURN_TOKEN|><|START_OF_TURN_TOKEN|><|CHATBOT_TOKEN|>
