crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__cohere_single_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<|START_OF_TURN_TOKEN|><|USER_TOKEN|>Explain photosynthesis briefly.<|END_OF_TURN_TOKEN|><|START_OF_TURN_TOKEN|><|CHATBOT_TOKEN|>
