crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__cohere_with_system.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<|START_OF_TURN_TOKEN|><|SYSTEM_TOKEN|>You are a science tutor.<|END_OF_TURN_TOKEN|><|START_OF_TURN_TOKEN|><|USER_TOKEN|>What is ATP?<|END_OF_TURN_TOKEN|><|START_OF_TURN_TOKEN|><|CHATBOT_TOKEN|>
