crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__deepseekv3_multi_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<|im_start|>system
You are a Rust expert.<|im_end|>
<|im_start|>user
How does borrowing work?<|im_end|>
<|im_start|>assistant
